# Craft

./: .gitignore  CMakeLists.txt
src/: main.c  sound.c  sound.h
